--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <!-- inicio do cabeçalho -->
     <header class="container">
-        <h1>
+        <h1 class="logo-mirror">
             <img src="/img/logo.png" alt="Logo da Mirror Fashion">
         </h1>
         <p class="sacola">Nenhum item na sacola</p>
@@ -28,6 +28,7 @@
     <main class="container destaque">
         <section class="busca">
             <form>
+                <h2>Busca</h3>
                 <input type="search">
                 <button>Buscar</button>
             </form>
