Adicionado borda esquisita

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             </nav>
         </section>
         <!-- fim menu departamentos -->
-        <section>
+        <section id="miga">
             <img src="/img/destaque-home.png" alt="Big City Night">
         </section>
         <!-- fim banner -->
