--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <link rel="stylesheet" href="css/estilos.css">
@@ -56,7 +56,7 @@
             </nav>
         </section>
         <!-- fim menu departamentos -->
-        <section id="miga">
+        <section class="banner-destaque">
             <img src="/img/destaque-home.png" alt="Big City Night">
         </section>
         <!-- fim banner -->
