--- a/sobre.html
+++ b/sobre.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Sobre a Mirror Fashion</title>
     <link rel="stylesheet" href="/css/sobre.css">
@@ -35,7 +35,7 @@
             Nosso centro de distribuição fica em <a href="https://www.google.com/maps/place/Jacarezinho,+PR,+86400-000/@-23.1588592,-50.0033584,13z/data=!3m1!4b1!4m5!3m4!1s0x94c026544d26f253:0xc66dac11dad56f73!8m2!3d-23.157939!4d-49.9777202">Jacarezinho</a>, no Paraná. De lá, saem 48 aviões que 
             distribuem nossos produtos às casas do mundo todo. Nosso centro de distribuição:
         </p>
-        <figure id="centro-distribuicao">
+        <figure class="centro-distribuicao">
             <img src="/img/centro-distribuicao.png" alt="Centro de distribuição">
             <figcaption>Centro de distribuição Mirror Fashion</figcaption>
         </figure>
@@ -97,8 +97,12 @@
                 <li><a href="http://facebook.com">Facebook</a></li>
                 <li><a href="http://twitter.com">Twitter</a></li>
             </ul>
+            <ul>
+                <li>Aloiala</li>
+                <li>Dançarina</li>
+                <li>Hide in bush</li>
+            </ul>
         </div>
     </footer>
-    
 </body>
 </html>
