--- a/produtos.html
+++ b/produtos.html
@@ -56,7 +56,7 @@
                     <h2>Camiseta Ecko Caveira Bad to The Bone</h2>
                     <p>por apenas R$ 48,95</p>
             
-                <button class="comprar">Comprar</button>
+                <button class="comprar"><a href="checkout.html">Comprar</a></button>
             </form>
         </section>
 
